terraform/modules/Harbor-Docker-Registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    ## SSL
    cert-manager.io/cluster-issuer: "letsencrypt"
    # annotations:
    # ingress.kubernetes.io/proxy-body-size: "0"
    # ingress.kubernetes.io/ssl-redirect: "true"
  #   meta.helm.sh/release-name: harbor
  #   meta.helm.sh/release-namespace: harbor-system
  #   nginx.ingress.kubernetes.io/proxy-body-size: "0"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: harbor-ingress
  namespace: harbor-system
spec:
  tls:
    - hosts:
        - harbor.registy.techboyraju.com
      secretName: letsencrypt-secret
  rules:
    - host: harbor.registy.techboyraju.com
      http:
        paths:
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /service/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /v2/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /chartrepo/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /c/
            pathType: Prefix
          - backend:
              service:
                name: harbor-portal
                port:
                  number: 80
            path: /
            pathType: Prefix
